--- a/src/assets/css/suporte.css
+++ b/src/assets/css/suporte.css
@@ -10,19 +10,17 @@
 }
 
 body {
+    width: 1920px;
     background-color: white;
     justify-content: center;
     align-items: center;
 }
 
 .header {
-    background-image: url('../image/Topo_Site\ \(1\).png');
-    background-size: cover;
-    /* Faz a imagem caber dentro do elemento */
+    background-image: url('../image/header.png');
+    background-size: contain;
     background-position: center;
-    /* Centraliza a imagem */
     background-repeat: no-repeat;
-    /* Impede que a imagem se repita */
     height: 130px;
     width: 100%;
     display: flex;
@@ -31,19 +29,101 @@ body {
 
 }
 
-#h2header {
-    color: white;
-    text-align: center;
-    font-size: 2.rem;
-    margin-left: 20px;
+
+.menu {
+    height: 100%;
+    width: 1437px;
+    justify-content: center;
+    align-items: end;
+    display: flex;
+
+}
+
+.imgmenu {
+    width: 28px;
+    height: 28px;
+    position: relative;
+    top: 3px;
+}
+
+.imgmenu2 {
+    width: 28px;
+    height: 28px;
+}
+
+.paginasmenu {
+    color: #F8F8F8;
+    list-style-type: none;
+    display: flex;
+    flex-direction: row;
+    width: 600px;
+    justify-content: space-around;
+    font-size: 2rem;
+    font-weight: bold;
+    align-items: center;
+    margin-bottom: 2px;
+}
+
+a {
+    text-decoration: none;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    color: #F8F8F8;
+    transition: 300ms;
+}
+
+li {
+    position: relative;
+    padding: 5px;
+    display: flex;
+    align-items: center;
+    font-weight: 300;
 }
 
 
+.suportePainel {
+    border: 1px solid #BCBCBC;
+    display: flex;
+    width: 700px;
+    height: 60px;
+    background-color: #F8F8F8;
+    font-family: Arial, Helvetica, sans-serif;
+    font-weight: bold;
+    justify-content: space-between;
 
-/* =========== inicio suporte ===========*/
+
+
+}
+
+.menuleft {
+    text-decoration: none;
+
+    color: #004A8D;
+    font-size: 1.6rem;
+}
+
+.menuright {
+    text-decoration: none;
+    color: #004A8D;
+    font-size: 1.6rem;
+
+}
+
+#divgradientHome {
+    width: 1440px;
+    height: 50px;
+    background: linear-gradient(#005185, #ffffff);
+
+
+}
+
+/* =========== FIM HEADER ===========*/
+
+/* =========== INICIO SUPORTE ===========*/
 
 #pagina-suporte {
-    padding-inline: 100px;
+    padding-inline: 390px;
 
 }
 
@@ -68,7 +148,7 @@ body {
 #container-forms-suport {
     display: flex;
     flex-direction: column;
-    width: 50%;
+    width: 100%;
     height: min-content;
     justify-content: center;
 }
@@ -162,3 +242,33 @@ body {
     padding-left: 20px;
     width: 100%;
 }
+
+
+
+/* =========== inicio FOOTER ===========*/
+#rodape {
+    width: 1440px;
+    background-color: #005185;
+    height: 120px;
+    margin-top: 100px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+
+
+}
+
+#rodape h2 {
+    font-size: 2.4rem;
+    color: #ffffff;
+    margin-right: 20px;
+}
+
+#logorodapeHome {
+    width: 120px;
+    height: 120px;
+    margin-left: 20px;
+}
+
+/* =========== FIM FOOTER ===========*/
