--- a/login.css
+++ b/login.css
@@ -18,11 +18,6 @@ body {
     display: flex;
 }
 
-.logo-do-sistema {
-    width: 40%;
-    height: 40%;
-}
-
 .card-botao {
     display: flex;
     flex-direction: column;
@@ -118,11 +113,40 @@ body {
         flex-direction: column;
         align-items: center;
     }
-
+    .matricula {
+        background-color: #D5D5D5;
+        border: none;
+        padding: 15px;
+        border-radius: 10px;
+        margin-bottom: 20px;
+        width: 220px;
+    }
+    .senha {
+        background-color: #D5D5D5;
+        border: none;
+        padding: 15px;
+        border-radius: 10px;
+        width: 220px;
+    }
+    .bloco-login {
+        display: flex;
+        margin-bottom: 15px;
+        margin-left: 0;
+    }
+    .logo-do-senac{
+        width: 40%;
+        height: 10%;
+        margin-bottom: 30px;
+    }
+    .boasVindas {
+        font-family: "Poppins", serif;
+        font-size: 25px;
+        font-weight: 600;
+    }
     .conteudo {
         width: 250px;
+        height: auto;
     }
-
     .titulo {
         font-weight: 550;
         font-family: "Poppins", serif;
