--- a/home.css
+++ b/home.css
@@ -12,20 +12,18 @@ body {
     flex-direction: column;
     display: flex;
     font-family: "Open Sans", serif;
+    width: 100%;
 
 
 }
 
 .header {
-    background-image: url('/image/header.png');
-    background-size: contain;
-    background-position: center;
-    background-repeat: no-repeat;
-    height: 130px;
-    width: 100%;
+    height: 170px;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: url('/image/Header-wallpaper.png');
+    width: 1920px;
 
 }
 
@@ -34,16 +32,17 @@ body {
     text-align: center;
     font-size: 2.4rem;
     margin-left: 20px;
+    
 
 }
 
 .menu {
-
     height: 100%;
-    width: 1437px;
+    width: 600px;
     justify-content: center;
     align-items: end;
     display: flex;
+    
 
 }
 
@@ -85,6 +84,24 @@ li {
     padding: 5px;
     display: flex;
     align-items: center;
+    
+}
+
+ul :hover{
+    color: #F7941D;
+    transition: 0.4s;  
+
+}
+
+a :hover{
+    color: #F7941D;
+    transition: 0.4s;  
+    
+}
+
+.menu a:hover svg {
+    fill: #F7941D;
+    transition: 0.3s;
 }
 
 .suportePainel {
@@ -116,7 +133,7 @@ li {
 }
 
 #divgradientHome {
-    width: 1440px;
+    width: 1920px;
     height: 50px;
     background: linear-gradient(#005185, #ffffff);
 
@@ -255,6 +272,26 @@ main p {
     font-weight: bold;
 }
 
+main select {
+    font-size: 1.4rem;
+    height: 40px;
+    width: 150px;
+    background-color: #e7e7e7;
+    border: 0.75px solid #004A8D;
+    border-radius: 5px;
+    transition: 3ms;
+
+}
+
+main select:focus{
+    border: 0.75px solid #F7941D;
+    border-bottom: 2px solid #F7941D;
+    background-color: #ffffff;
+    transition: 3ms;
+    outline: none;
+
+}
+
 
 input {
     font-size: 1.4rem;
@@ -343,7 +380,7 @@ button {
 
 
 #rodape {
-    width: 1440px;
+    width: 1920px;
     background-color: #005185;
     height: 120px;
     margin-top: 100px;
