--- a/painel.css
+++ b/painel.css
@@ -158,34 +158,10 @@ right: 17%;
 }
 
 
-main label {
-    font-size: 2.4rem;
-    color: #004A8D;
-}
-main p {
-    font-size: 1.6rem;
-    font-weight: bold;
-}
 
-main input {
-    font-size: 1.4rem;
-    height: 40px;
-    width: 150px;
-    background-color: #e7e7e7;
-    border: 0.75px solid #004A8D;
-    border-radius: 5px;
-    transition: 3ms;
-}
-
-main input:focus {
-    border: 0.75px solid #F7941D;
-    border-bottom: 2px solid #F7941D;
-    background-color: #ffffff;
-    transition: 3ms;
-}
 
 .container {
-    padding: 20px;
+    padding: 50px;
     border: 1px red solid;
     width: 100%;
     height: 100%;
@@ -194,7 +170,6 @@ main input:focus {
 .cardSeparator {
     display: flex;
     flex-direction: row;
-    width: 255px;
     height: auto;
     color: #454545;
 }
@@ -209,22 +184,15 @@ main input:focus {
 }
 
 u{
-    font-size: 9px;
+    font-size: 16px;
     position: relative;
     bottom: 1.5px;
 }
 
-.top-section {
-    display: flex;
-    align-items: center;
-    gap: 15px; /* Espaçamento entre o figure e as informações */
-    margin-bottom: 20px; /* Espaçamento entre a seção superior e inferior */
-}
 
-.top-section figure {
-    width: 10px; 
-    height: 10px; 
-    margin: 3px;
+figure {
+    width: 20px; 
+    margin: 5px;
 }
 
 
@@ -242,81 +210,91 @@ u{
     display: flex;
     align-items: flex-start;
     border: 1px #AFAFAF solid;
-    width: 250px;
-    height: 100%;
+    width: auto;
+    height: auto;
     border-top-right-radius: 15px;
     border-bottom-right-radius: 15px;
     flex-direction: column;
-    padding: 5px;
+    padding: 5px 25px 5px 5px;
     
 }
 
+
 .data-hora{
     display: flex;
-    width: 125%;
+    width: 130%;
     justify-content: space-between;
     margin-top: 10px;
 }
 
+b{
+    font-size: 12px;
+}
+
 .infosreserva{
-    height: 50%;
     padding: 1px 1px 1px 3px;
 }
 
 .textreserva{
-    font-size: 7px;
+    font-size: 11px;
     font-weight: 400;
     margin-top: 2px;
+    letter-spacing: 0.5px;
 }
 
 #notereserv{
-    padding-top: 5px;
+    padding-top: 10px;
 }
 
 #scrollreservas{
     background-color: #E7E7E7;
-    width: 100px;
-    padding: 5px;
+    width: 180px;
+    height: 27px;
     border-radius: 2px;
-    margin: 3px 0 0 0;
-    overflow-x: scroll;
+    overflow-x: auto;
+    display: flex;
+    align-items: center;
+    margin-bottom: 5px;
 }
 
 #scrollreservas::-webkit-scrollbar {
-    height: 1px; /* Altura da barra de rolagem horizontal */
+    height: 2px; 
   }
   
   #scrollreservas::-webkit-scrollbar-track {
-    background: #C9C9C9; /* Cor do fundo da barra de rolagem */
+    background: #C9C9C9;
     border-radius: 4px;
   }
   
   #scrollreservas::-webkit-scrollbar-thumb {
-    background: #004A8D; /* Cor do scroll */
+    background: #004A8D;
     border-radius: 4px;
   }
   
 
 
 .buttons{
-    margin-top: 5px;
-    width: 85px;
+    margin: 5px;
+    width: 89%;
     display: flex;
     justify-content: space-between;
 }
 
 .buttonicon{
-    width: 5px;
-    height: 5px;
+    width: 9px;
+    margin: 0 5px 0 0;
 }
 
 button{
     border: none;
-    padding: 2px;
+    padding: 5px;
     border-radius: 3px;
     font-family: "Open Sans", serif;
     letter-spacing: 0.5px;
     cursor: pointer;
+    font-size: 10px;
+    display: flex;
+    align-items: center;
 }
 
 #cancel{
