--- a/painel.css
+++ b/painel.css
@@ -8,7 +8,6 @@
 body {
     background-color: #ffffff;
     justify-content: center;
-    align-items: center;
     flex-direction: column;
     display: flex;
     font-family: "Open Sans", serif;
@@ -31,8 +30,6 @@ header {
     text-align: center;
     font-size: 2.4rem;
     margin-left: 20px;
-    
-
 }
 
 .menu {
@@ -45,16 +42,17 @@ header {
 
 }
 
-.imgmenu {
-    width: 28px;
-    height: 28px;
-    position: relative;
-    top: 3px;
-}
-
-.imgmenu2 {
-    width: 28px;
-    height: 28px;
+#tituloPainel{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    border: 1px solid rebeccapurple;
+    font-size: 40px;
+    height: 100px;
+    width: 550px;
+    color: #454545;
+    font-weight: 700;
+    letter-spacing: 1px;
 }
 
 .paginasmenu {
@@ -132,22 +130,10 @@ a :hover{
 }
 
 #divgradientHome{
-    width: 1440px;
+    width: 100%;
     height: 50px;
     background: linear-gradient(#005185, #ffffff);
     
-}
-#sectionhome{
-margin-top: 30px;
-height: 50px;
-position: relative;
-width: 350px;
-right: 17%;
-}
-
-#sectionh2home{
-    font-size: 3.4rem;
-
 }
 
 
@@ -183,7 +169,7 @@ right: 17%;
 .container {
     padding: 50px;
     border: 1px red solid;
-    width: 100%;
+    width: 70%;
     height: 100%;
 }
 
