--- a/src/assets/css/suporte.css
+++ b/src/assets/css/suporte.css
@@ -3,6 +3,8 @@
     padding: 0px;
     box-sizing: border-box;
     font-family: Arial, Helvetica, sans-serif;
+    list-style: none;
+    text-decoration: none;
 }
 
 :root {
@@ -23,36 +25,53 @@ main {
 }
 
 header {
-    background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
     height: 100px;
-    width: 100%;
     display: flex;
-}
-
-.container-header{
-    display: flex;
-    flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: space-between;
+    padding: 10px 20px;
+    background: linear-gradient(90deg, #012342, #004a8d, #004a8d, #012342);
 }
 
-.logo img{
-    height: 70px;
-    width: max-content;
-}
-
-.container-menu{
-    height: max-content;
-    width: 100%;
-
-    background-color: yellow;
-    padding-bottom: 10px;
-}
-
-.menu {
-    justify-content: center;
+.container-header {
     display: flex;
+    align-items: center;
+    width: 100%;
 }
+
+.logo {
+    display: flex;
+    align-items: center;
+    width: 17%;
+    background-color: yellow;
+}
+
+.logo img {
+    height: 80px;
+    padding-left: 150px;
+}
+
+.container-menu {
+    flex: 1;
+    display: flex;
+    background-color: red;
+}
+
+.menu ul {
+    display: flex;
+    gap: 50px;
+    position: relative;
+    background-color: green;
+}
+
+.menu a {
+    text-decoration: none;
+    color: white;
+    display: flex;
+    align-items: center;
+    gap: 5px;
+}
+
 
 
 .menu a:hover {
